// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migration-table (integration) > ensureMigrationTable > should create the migration table with correct columns 1`] = `
[
  {
    "column_name": "id",
    "data_type": "uuid",
    "is_nullable": "NO",
  },
  {
    "column_name": "name",
    "data_type": "text",
    "is_nullable": "NO",
  },
  {
    "column_name": "checksum",
    "data_type": "text",
    "is_nullable": "NO",
  },
  {
    "column_name": "created_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "NO",
  },
  {
    "column_name": "started_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "NO",
  },
  {
    "column_name": "finished_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "YES",
  },
  {
    "column_name": "rolled_back_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "YES",
  },
]
`;

exports[`migration-table (integration) > ensureMigrationTable > should support custom schema and table name 1`] = `
[
  {
    "column_name": "id",
    "data_type": "uuid",
  },
  {
    "column_name": "name",
    "data_type": "text",
  },
  {
    "column_name": "checksum",
    "data_type": "text",
  },
  {
    "column_name": "created_at",
    "data_type": "timestamp with time zone",
  },
  {
    "column_name": "started_at",
    "data_type": "timestamp with time zone",
  },
  {
    "column_name": "finished_at",
    "data_type": "timestamp with time zone",
  },
  {
    "column_name": "rolled_back_at",
    "data_type": "timestamp with time zone",
  },
]
`;

exports[`migration-table (integration) ensureMigrationTable should create the migration table with correct columns 1`] = `
[
  {
    "column_name": "id",
    "data_type": "uuid",
    "is_nullable": "NO",
  },
  {
    "column_name": "name",
    "data_type": "text",
    "is_nullable": "NO",
  },
  {
    "column_name": "checksum",
    "data_type": "text",
    "is_nullable": "NO",
  },
  {
    "column_name": "created_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "NO",
  },
  {
    "column_name": "started_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "NO",
  },
  {
    "column_name": "finished_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "YES",
  },
  {
    "column_name": "rolled_back_at",
    "data_type": "timestamp with time zone",
    "is_nullable": "YES",
  },
]
`;

exports[`migration-table (integration) ensureMigrationTable should support custom schema and table name 1`] = `
[
  {
    "column_name": "id",
    "data_type": "uuid",
  },
  {
    "column_name": "name",
    "data_type": "text",
  },
  {
    "column_name": "checksum",
    "data_type": "text",
  },
  {
    "column_name": "created_at",
    "data_type": "timestamp with time zone",
  },
  {
    "column_name": "started_at",
    "data_type": "timestamp with time zone",
  },
  {
    "column_name": "finished_at",
    "data_type": "timestamp with time zone",
  },
  {
    "column_name": "rolled_back_at",
    "data_type": "timestamp with time zone",
  },
]
`;
